# messenger

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  skills-lock.json
.github/workflows/: ci.yml
.omx/: metrics.json
.omx/state/: hud-state.json  notify-fallback-state.json  notify-hook-state.json  skill-active-state.json  tmux-hook-state.json  update-check.json
apps/android/: settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
apps/web/e2e/: offline-retry.spec.ts
apps/web/src/: index.css
backend/gateway/: Cargo.toml
backend/gateway/src/: lib.rs  main.rs  router.rs
backend/gateway/tests/: account_and_search_routes.rs  device_routes.rs  health_check.rs
backend/migrations/: 0001_initial.sql
core/rust-core/: Cargo.toml
core/rust-core/crates/device-trust/: Cargo.toml
core/rust-core/crates/device-trust/src/: lib.rs
core/rust-core/crates/device-trust/tests/: device_trust_contract.rs  wrapped_history_access.rs
core/rust-core/crates/domain-model/: Cargo.toml
core/rust-core/crates/domain-model/src/: lib.rs
core/rust-core/crates/domain-model/tests/: message_state_machine.rs
core/rust-core/crates/identity-contracts/: Cargo.toml
core/rust-core/crates/identity-contracts/src/: lib.rs
core/rust-core/crates/identity-contracts/tests/: account_identity_rules.rs
core/rust-core/crates/media-pipeline/: Cargo.toml
core/rust-core/crates/media-pipeline/src/: lib.rs
core/rust-core/crates/media-pipeline/tests/: storage_cleanup_guards.rs
core/rust-core/crates/message-protocol/: Cargo.toml
core/rust-core/crates/message-protocol/src/: lib.rs
core/rust-core/crates/sync-engine/: Cargo.toml
core/rust-core/crates/sync-engine/src/: lib.rs
core/rust-core/crates/sync-engine/tests/: message_retry_timing.rs
core/rust-core/src/: lib.rs
docs/testing/: alpha-known-risks.md  alpha-manual-test-checklist.md
scripts/: bootstrap-dev.ps1  check.ps1
(+54 files in other folders)
