[workspace]
members = [
    "backend/crates/account-service",
    "backend/crates/device-key-service",
    "backend/crates/directory-service",
    "backend/crates/media-service",
    "backend/crates/messaging-service",
    "backend/crates/persistence",
    "backend/crates/presence-service",
    "backend/gateway",
    "core/rust-core",
    "core/rust-core/crates/device-trust",
    "core/rust-core/crates/domain-model",
    "core/rust-core/crates/identity-contracts",
    "core/rust-core/crates/media-pipeline",
    "core/rust-core/crates/message-protocol",
    "core/rust-core/crates/sync-engine",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "net", "sync"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
