[package]
name = "gateway"
version = "0.1.0"
edition.workspace = true

[lib]
name = "messenger_gateway"
path = "src/lib.rs"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
account-service = { path = "../crates/account-service" }
directory-service = { path = "../crates/directory-service" }
axum.workspace = true
http-body-util.workspace = true
persistence = { path = "../crates/persistence" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true

[dev-dependencies]
serde_json.workspace = true
