[package]
name = "rust-core"
version = "0.1.0"
edition.workspace = true

[lib]
name = "rust_core"
path = "src/lib.rs"

[dependencies]
device-trust = { path = "crates/device-trust" }
domain-model = { path = "crates/domain-model" }
identity-contracts = { path = "crates/identity-contracts" }
message-protocol = { path = "crates/message-protocol" }
sync-engine = { path = "crates/sync-engine" }
